# cmd/server/docs/swagger.yaml
@@ -532,7 +532,7 @@ paths:
       summary: Update Staff
       tags:
       - staff
-  /wecom/account/:
+  /wecom/account:
     get:
       consumes:
       - application/json
@@ -653,7 +653,7 @@ paths:
       summary: Update Wecom configuration
       tags:
       - wecom_config
-  /wecom/receptionist/:
+  /wecom/receptionist/{kfid}:
     delete:
       consumes:
       - application/json
@@ -673,6 +673,22 @@ paths:
       summary: WeCom receptionist delete
       tags:
       - wecom_receptionist
+    get:
+      consumes:
+      - application/json
+      description: receptionist list
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/client.ReceptionistList'
+            type: array
+      summary: WeCom receptionist list
+      tags:
+      - wecom_receptionist
     post:
       consumes:
       - application/json
@@ -690,23 +706,6 @@ paths:
         "200":
           description: OK
       summary: WeCom receptionist add
-      tags:
-      - wecom_receptionist
-  /wecom/receptionist/{kfid}:
-    get:
-      consumes:
-      - application/json
-      description: receptionist list
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/client.ReceptionistList'
-            type: array
-      summary: WeCom receptionist list
       tags:
       - wecom_receptionist
 swagger: "2.0"
